[package]
name = "asn2qif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
csv = "1.2.2"
serde = { version = "1.0.164", features = ["derive"] }
